[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/spritesheets/explosion-6.png" type="Texture" id=1]
[ext_resource path="res://Interactables/Crates/NitroCrate/Explosion.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "Default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 72.0

[node name="Explosion" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
animation = "Default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[connection signal="area_entered" from="." to="." method="_on_Explosion_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
